fixed text size on mobile

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -92,6 +92,9 @@ header .header-content .header-content-inner h1 {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 70px;
+  @media screen and (max-width: 480px) {
+    font-size: 50px;
+  }
 }
 header .header-content .header-content-inner hr {
   margin: 30px auto;
